--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,2 +1,15 @@
 /**/
+h3{
+  margin-top: 10px;
+}
 
+button{
+  margin-top: 20px;
+  width: 100%;
+}
+
+.map{
+  margin-top: 20px;
+  width: 100%;
+  height: 300px;
+}
